--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1><#ffffff>Hello Extensions</#ffffff></h1>
+    <h1><span style="color:#9c27b0;">MY MILKSHAKE BRINGS ALL THE BOYS TO THE YARD</span></h1>
   </body>
 </html>
